# MobileRobotNavigation

./: .gitignore  README.md
doc/: Hardware Architecture.drawio  Hardware_Architecture.drawio  Local_Waypoint_Nav.drawio  Velocity_Estimation_Flowchart.drawio  smile_mobile_movement_api.drawio
smile_mobile_robot_ws/src/smile_mobile_gui/: CMakeLists.txt  package.xml  plugin.xml  plugin_odometry_display.xml  plugin_pid_tuner.xml  plugin_position_plotter.xml  setup.py
smile_mobile_robot_ws/src/smile_mobile_gui/resource/: odometry_display_widget.ui  pid_tuner_generic.ui
smile_mobile_robot_ws/src/smile_mobile_gui/scripts/: Odometry_Display  PID_Tuner  Position_Plotter  smile_mobile_gui
smile_mobile_robot_ws/src/smile_mobile_gui/src/smile_mobile_gui/: odometry_display.py  odometry_display_widget.py  pid_tuner.py  pid_tuner_generic_widget.py  position_plotter.py  position_plotter_widget.py
smile_mobile_robot_ws/src/smile_mobile_hardware/: CMakeLists.txt  package.xml
smile_mobile_robot_ws/src/smile_mobile_hardware/src/: hardware_interface.py  imuCollect.py  masterController.ino  webcam_publish.py  webcam_receive.py
smile_mobile_robot_ws/src/smile_mobile_hardware/src/darknet/: LOGITECH  Makefile  darknet_video.py
smile_mobile_robot_ws/src/smile_mobile_hardware/src/encoder_driver/: encoder_driver.ino
smile_mobile_robot_ws/src/smile_mobile_hardware/src/master_controller/: master_controller.ino
smile_mobile_robot_ws/src/smile_mobile_robot/: CMakeLists.txt  package.xml
smile_mobile_robot_ws/src/smile_mobile_robot/config/: smile_physical_robot.yaml  smile_robot.yaml  smile_sim_robot.yaml
smile_mobile_robot_ws/src/smile_mobile_robot/launch/: keyboard_teleop_sim.launch  main_physical_robot.launch  main_sim.launch  movement_controller.launch
smile_mobile_robot_ws/src/smile_mobile_robot/msg/: Odom.msg  smile_pwm.msg
smile_mobile_robot_ws/src/smile_mobile_robot/src/control/: keyboard_teleop.py  lane_follower.py  movement_controller.py  pid_controller.py
smile_mobile_robot_ws/src/smile_mobile_robot/src/helpers/: send_desired_movement.py  send_desired_odom.py
smile_mobile_robot_ws/src/smile_mobile_robot/src/perception/: odometry.py  raw_odometry.py
smile_mobile_robot_ws/src/smile_mobile_robot/src/perception/vision/: lane_detector.py  take_picture.py  test_camera_cal.p
smile_mobile_robot_ws/src/smile_mobile_robot/srv/: bool_call.srv  pid_gains.srv
smile_mobile_sim_ws/src/husky_control/launch/: control.launch
smile_mobile_sim_ws/src/husky_description/launch/: description.launch
smile_mobile_sim_ws/src/husky_gazebo/launch/: husky_empty_world.launch  multi_husky_playpen.launch  playpen.launch  spawn_husky.launch
smile_mobile_sim_ws/src/husky_gazebo/scripts/: husky_position_controller.py
smile_mobile_sim_ws/src/husky_gazebo/scripts/Astar/: Astar_navigation.py  Planner.py  PlannerNavigation.py  create_database.py  create_world.py  load_database.py  main.py  path_database.txt
smile_mobile_sim_ws/src/husky_gazebo/scripts/Create_World/: change_world.py
smile_mobile_sim_ws/src/husky_gazebo/worlds/: boundary_boxes.world  box.sdf  square_field_cube_obstacles.world
smile_mobile_sim_ws/src/smile_mobile_control/: CMakeLists.txt  package.xml
smile_mobile_sim_ws/src/smile_mobile_control/config/: smile_control.yaml
smile_mobile_sim_ws/src/smile_mobile_control/launch/: smile_control.launch
smile_mobile_sim_ws/src/smile_mobile_control/src/control/: motor_controller.py
smile_mobile_sim_ws/src/smile_mobile_control/src/sensors/: encoders.py
smile_mobile_sim_ws/src/smile_mobile_description/: CMakeLists.txt  package.xml
smile_mobile_sim_ws/src/smile_mobile_description/launch/: smile_control.rviz  smile_robot.launch  smile_robot.rviz
smile_mobile_sim_ws/src/smile_mobile_description/urdf/: smile.urdf.xacro
smile_mobile_sim_ws/src/smile_mobile_dynamic/: CMakeLists.txt  package.xml
smile_mobile_sim_ws/src/smile_mobile_dynamic/launch/: dynamic_obstacle_avodiance.launch
smile_mobile_sim_ws/src/smile_mobile_dynamic/scripts/Astar/: Planner2D.py  PlannerPavedUnpaved.py  create_database.py  load_database.py  path_database.txt
smile_mobile_sim_ws/src/smile_mobile_dynamic/scripts/cadrl/: cadrl_custom.py  husky_node.py  multi_agent.py
smile_mobile_sim_ws/src/smile_mobile_dynamic/scripts/parameters/: parameters_configurations.json
smile_mobile_sim_ws/src/smile_mobile_dynamic/scripts/query_correction/: Planner.py  database_query_correction.py  final_path.txt  test.py  visualize_path.py
smile_mobile_sim_ws/src/smile_mobile_gazebo/: CMakeLists.txt  package.xml
smile_mobile_sim_ws/src/smile_mobile_gazebo/launch/: smile_mobile_world.launch  smile_world_simple.launch  smile_world_simple_street_only.launch
smile_mobile_sim_ws/src/smile_mobile_gazebo/models/smile_map/: model.config  model.sdf
smile_mobile_sim_ws/src/smile_mobile_gazebo/scripts/: custom_position_controller.py
smile_mobile_sim_ws/src/smile_mobile_gazebo/scripts/Astar/: Astar_Graph.py  Astar_navigation.py  back.py  create_database.py  create_world.py  path.txt
smile_mobile_sim_ws/src/smile_mobile_gazebo/scripts/cadrl/: GA3C-CADRL.py  agent.py  cadrl_custom.py  husky_node_reference.py  multi_husky.py  util.py
smile_mobile_sim_ws/src/smile_mobile_gazebo/worlds/: smile_world.world  smile_world_pure_trees.world  smile_world_trees.world  smile_world_v2.world
smile_mobile_sim_ws/src/smile_mobile_sim/: CMakeLists.txt  package.xml
smile_mobile_sim_ws/src/smile_mobile_sim/launch/: smile_empty_world.launch  smile_world.launch
smile_mobile_sim_ws/src/smile_mobile_sim/media/materials/scripts/: smile.material
smile_mobile_sim_ws/src/smile_mobile_sim/models/smile_map/: model.config  model.sdf
smile_mobile_sim_ws/src/smile_mobile_sim/src/: cvt_odom_data.py  wheel_driver.py
smile_mobile_sim_ws/src/smile_mobile_sim/worlds/: smile.world
smile_mobile_ws/src/smile_mobile_robot/: package.xml
smile_mobile_ws/src/smile_mobile_sim/: CMakeLists.txt
smile_mobile_ws/src/smile_mobile_sim/launch/: smile_empty_world.launch  smile_world.launch
(+9 files in other folders)
